manifest.yaml


---

apiVersion: v1
kind: Service
metadata:
  name: rithv-webapp-service

spec:
  # this defines which pod are going to represtnt
  # userd as service endpoint
  # or extrela connectors
  selector: 
    rithvlabel: webapp-api 
    
  ports:
   - name: http
     port: 8080
     nodePort: 30080 

   - name: endpoint
     port: 61616

  type: NodePort

---

apiVersion : apps/v1
kind: Deployment
metadata:
  name: rithv-webapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      rithvlabel: webapp-api 
  template:
    metadata:
      labels:
        rithvlabel: webapp-api 
    spec:
      containers:
        - name: webapp-api 
          image: localhost:5000/rithvapi
          ports:
          - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: rithv-pyth-service

spec:
  # this defines which pod are going to represtnt
  # userd as service endpoint
  # or extrela connectors
  selector: 
    rithvlabel: python-api 
    
  ports:
   - name: http
     port: 5050
     nodePort: 30090  

   - name: endpoint
     port: 61617

  type: NodePort

---

apiVersion : apps/v1
kind: Deployment
metadata:
  name: rithv-python-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      rithvlabel: python-api
  template:
    metadata:
      labels:
        rithvlabel: python-api
    spec:
      containers:
        - name: python-api 
          image: localhost:5000/rithpython
          ports:
          - containerPort: 5050
#          env: 
#            - name: PATH_BASE # <---
#              value: "svc"

---

 
 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class:  nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules: 
  - http:
      paths:
      - path: /rith(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rithv-pyth-service
            port:
              number: 5050
      - path: /v1/svc-dot(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rithv-webapp-service
            port:
              number: 8080
